feat(server): setup express server

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Document Management System API",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/azemoh/doc-man/issues"
   },
-  "homepage": "https://github.com/azemoh/doc-man#readme"
+  "homepage": "https://github.com/azemoh/doc-man#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "morgan": "^1.7.0",
+    "nodemon": "^1.11.0"
+  }
 }
