--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
   "root": true,
   "extends": "airbnb-base",
+  "parserOptions": {
+    "sourceType": "module"
+  },
   "env": {
     "node": true,
     "es6": true,
