--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^1.11.0"
   },
   "devDependencies": {
+    "codeclimate-test-reporter": "^0.4.0",
     "eslint": "^3.10.0",
     "eslint-config-airbnb-base": "^10.0.1",
     "eslint-plugin-import": "^2.2.0",
