--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "sequelize": "^3.25.1",
+    "sequelize-cli": "^2.4.0"
   },
   "devDependencies": {
     "codeclimate-test-reporter": "^0.4.0",
