--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
+    "pg": "^6.1.0",
     "sequelize": "^3.25.1",
     "sequelize-cli": "^2.4.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "codeclimate-test-reporter": "^0.4.0",
     "eslint": "^3.10.0",
     "eslint-config-airbnb-base": "^10.0.1",
