--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "nodemon server.js",
     "lint": "eslint .",
-    "test": "istanbul cover _mocha -- -R spec test/**/*.spec.js"
+    "test": "NODE_ENV=test istanbul cover _mocha -- -R spec test/**/*.spec.js",
+    "db:create": "gulp db:create && NODE_ENV=test gulp db:create",
+    "db:migrate": "sequelize db:migrate && NODE_ENV=test sequelize db:migrate",
+    "db:setup": "npm run db:create && npm run db:migrate"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "gulp": "^3.9.1",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
     "pg": "^6.1.0",
