--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
+    "jsonwebtoken": "^7.1.9",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
     "pg": "^6.1.0",
