chore(db): remove unused database config

--- a/config/config.json
+++ b/config/config.json
@@ -17,11 +17,6 @@
     "logging": false
   },
   "production": {
-    "use_env_variable": "DATABASE_URL",
-    "username": "root",
-    "password": null,
-    "database": "doc_man_production",
-    "protocol": "postgres",
-    "dialect": "postgres"
+    "use_env_variable": "DATABASE_URL"
   }
 }
