code(test): refactor tests

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "NODE_ENV=test istanbul cover _mocha -- -R spec test/**/*.spec.js",
     "db:create": "gulp db:create",
     "db:migrate": "sequelize db:migrate",
+    "db:seed": "sequelize db:seed:all",
     "db:setup": "npm run db:create && npm run db:migrate",
     "db:create:test": "NODE_ENV=test gulp db:create",
     "db:migrate:test": "NODE_ENV=test sequelize db:migrate",
