--- a/config/config.json
+++ b/config/config.json
@@ -1,18 +1,10 @@
 {
   "development": {
-    "username": null,
-    "password": null,
-    "database": "doc_man_development",
-    "host": "127.0.0.1",
-    "port": "5432",
+    "use_env_variable": "DATABASE_URL",
     "dialect": "postgres"
   },
   "test": {
-    "username": null,
-    "password": null,
-    "database": "doc_man_test",
-    "host": "127.0.0.1",
-    "port": "5432",
+    "use_env_variable": "TEST_DATABASE_URL",
     "dialect": "postgres",
     "logging": false
   },
